# secretworld

./: .env.example  .gitignore  CLAUDE.md  ISSUES.md  README.md  playtest.md  pyproject.toml
.claude/: settings.local.json
docs/: AI_FEATURES.md  ai_location_generation_spec.md  save_file_detection_spec.md
issues/: DEADLOCK.md
scripts/: __init__.py  agent_checkpoint.py  agent_persistence.py  ai_agent.py  checkpoint_triggers.py  generate_test_world.py  human_like_agent.py  run_simulation.py  state_parser.py
scripts/agent/: __init__.py  class_behaviors.py  memory.py  personality.py
scripts/scenarios/: __init__.py
scripts/validation/: __init__.py  ai_quality.py  assertions.py  coverage.py  regression.py  scenarios.py
src/cli_rpg/: __init__.py  ai_config.py  ai_service.py  ai_world.py  ambient_sounds.py  autosave.py  background_gen.py  brave_rewards.py  camping.py  character_creation.py  cleric.py  colors.py  combat.py  companion_banter.py  companion_quests.py  companion_reactions.py  completer.py  config.py  content_cache.py  content_layer.py  (+50 more)
tests/: conftest.py  test_agent_checkpoint.py  test_agent_class_behaviors.py  test_agent_memory.py  test_agent_personality.py  test_ai_agent.py  test_ai_cache_persistence.py  test_ai_config.py  test_ai_content_logging.py  test_ai_conversations.py  test_ai_enemy_generation.py  test_ai_failure_fallback.py  test_ai_item_generation.py  test_ai_layered_generation.py  test_ai_location_category.py  test_ai_lore_generation.py  test_ai_merchant_detection.py  test_ai_ollama.py  test_ai_puzzle_generation.py  test_ai_quality.py  test_ai_quest_generation.py  test_ai_room_content.py  test_ai_secrets.py  test_ai_service.py  test_ai_streaming.py  test_ai_world_boss.py  test_ai_world_generation.py  test_ai_world_hierarchy.py  test_ai_world_subgrid.py  test_ai_world_treasure.py  test_ambient_sounds.py  test_animal_companion.py  test_area_generation.py  test_armor_restrictions.py  test_ascii_art.py  test_autosave.py  test_background_gen.py  test_bash.py  test_bestiary.py  test_boss_chamber.py  (+259 more)
thoughts/: current_plan.md  documentation_review.md  documentation_review_summary.md  e2e_test_context.md  implementation_summary.md
(+74 files in other folders)
