[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-rpg"
version = "0.1.0"
description = "A CLI-based AI-generated role-playing game"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "CLI RPG Team" }
]
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
cli-rpg = "cli_rpg.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.291",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
